--- a/.github/workflows/python-actions-demo.yml
+++ b/.github/workflows/python-actions-demo.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
       - name: Fetch num squared
         id: get_square
         uses: ./actions/python-demo-action.yml
