--- a/.github/workflows/python-actions-demo.yml
+++ b/.github/workflows/python-actions-demo.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
       - name: List files in the repository
         run: |
-          ls ${{ github.workspace }}
+          find ${{ github.workspace }} -type f
       - name: Fetch num squared
         id: get_square
         uses: ./actions/python-demo-action.yml
