Fixing path issues with python demo

--- a/actions/python-demo-action.yml
+++ b/actions/python-demo-action.yml
@@ -1,4 +1,4 @@
-# action.yaml
+# python-demo-action.yml
 name: 'Custom GitHub Action'
 description: 'A GitHub Action that takes an input and returns the square of the number'
 inputs:
