--- a/.github/workflows/ht-pdf.yml
+++ b/.github/workflows/ht-pdf.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           repository: 'plindman/ht-pdf'
           token: ${{ secrets.HTPDFREPO }}
+          path: 'ht-pdf'
       - name: Access cloned repository content
         run: |
           cd ht-pdf
