--- a/.github/workflows/learn-github-actions-demo.yml
+++ b/.github/workflows/learn-github-actions-demo.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: Learn GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀 with this sample
 on: [push]
 jobs:
